python requests code upload

--- a/code/python_requests_post.ipynb
+++ b/code/python_requests_post.ipynb
@@ -61,7 +61,7 @@
    ],
    "source": [
     "files = {'file': open('../data/dog1-4.jpg', 'rb')}\n",
-    "result = requests.post( 'http://203.228.77.3:5000/inception/predict/',files=files)\n",
+    "result = requests.post( 'http://localhost:5000/inception/predict/',files=files)\n",
     "BeautifulSoup(result.text,'html.parser')"
    ]
   },
@@ -107,7 +107,7 @@
    "source": [
     "files = {'instances': open('../data/girl.png', 'rb'),'class': open('../data/coco.names', 'rb')}\n",
     "header = {\"size\":\"416\",\"thresh\":\"0.5\"}\n",
-    "result=requests.post( 'http://203.228.77.3:5000/yolov3/predict/',files=files,headers=header)\n",
+    "result=requests.post( 'http://localhost:5000/yolov3/predict/',files=files,headers=header)\n",
     "BeautifulSoup(result.text,'html.parser')"
    ]
   },
